Improve logging and resource management